<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rclpy_param_helper</name>
  <version>0.0.1</version>
  <description>Convert between Python dictionary and ROS2 parameters</description>
  <maintainer email="ricardo.azambuja@gmail.com">ros2user</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <exec_depend>ros2param</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
